--- a/Saneamento_Basico_R/src/main/java/com/mycompany/saneamento_basico_r/model/view/Adminisctrador/FrAdministrador.form
+++ b/Saneamento_Basico_R/src/main/java/com/mycompany/saneamento_basico_r/model/view/Adminisctrador/FrAdministrador.form
@@ -37,9 +37,13 @@
                       <Component id="btnUsuarioLogin" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="fAdministradorUsuario" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
-                  <Component id="fAdministradorSenha" min="-2" pref="330" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="fAdministradorSenha" min="-2" pref="330" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="btnSenhaEsqueci" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="191" max="32767" attributes="0"/>
+              <EmptySpace pref="71" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="246" max="32767" attributes="0"/>
@@ -62,6 +66,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblAdministradorSenha" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
                   <Component id="fAdministradorSenha" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnSenhaEsqueci" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnUsuarioLogin" min="-2" max="-2" attributes="0"/>
@@ -112,6 +117,20 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Login"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUsuarioLoginActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnSenhaEsqueci">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Dialog" size="10" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Esqueci a senha"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSenhaEsqueciActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
